src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Incentives_Report_Delivery__c</fullName>
        <label>Incentives Report Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Box Folder</fullName>
                </value>
                <value>
                    <fullName>Secure FTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives_Report_Frequency__c</fullName>
        <label>Incentives Report Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Targeted_Marketing__c</fullName>
        <label>Initial Targeted Marketing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interested_in_OE_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, client is interested in Open Enrollment data integration</description>
        <inlineHelpText>When checked, client is interested in Open Enrollment data integration</inlineHelpText>
        <label>Interested in OE Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_Lapse_Criteria__c</fullName>
        <description>Required in SpringCM; used to indicate whether there Lapse Criteria is required. If so, users will be required to populate the Lapse Criteria, Lapse Criteria Detail, and Consecutive Inactive Months to Lapsed fields.</description>
        <inlineHelpText>Required in SpringCM; used to indicate whether there Lapse Criteria is required. If so, users will be required to populate the Lapse Criteria, Lapse Criteria Detail, and Consecutive Inactive Months to Lapsed fields.</inlineHelpText>
        <label>Is there Lapse Criteria?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_PTMM__c</fullName>
        <description>Required in SpringCM; used to indicate whether there is a Participant Term Minimum number of Months required. If so, users will be required to populate the Participant Term Minimum Months field.</description>
        <inlineHelpText>Required in SpringCM; used to indicate whether there is a Participant Term Minimum number of Months required. If so, users will be required to populate the Participant Term Minimum Months field.</inlineHelpText>
        <label>Is there a PTMM?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_lapsed_user_clause__c</fullName>
        <description>JENGA-1174</description>
        <label>Is there a lapsed user clause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Key__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Jira Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Join_Alt_Text__c</fullName>
        <description>Client preferred alternative to mention of &quot;join&quot; in assets.</description>
        <inlineHelpText>Client preferred alternative to mention of &quot;join&quot; in assets.</inlineHelpText>
        <label>Join Alt Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff_Date__c</fullName>
        <description>Part of JENGA-1593
The date will be when a CIS/CIM has a kick-off with the client. This initiates when an implementation starts</description>
        <label>Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lapse_Criteria__c</fullName>
        <description>Integrated with NetSuite and Redshift</description>
        <inlineHelpText>Integrated with NetSuite and Redshift</inlineHelpText>
        <label>Lapse Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Last Activity</fullName>
                </value>
                <value>
                    <fullName>Last BG Check</fullName>
                </value>
                <value>
                    <fullName>Last BH Coaching</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                    <isActive>false</isActive>
                    <label>--None--</label>
                </value>
                <value>
                    <fullName>8000f0000008cu3AAA</fullName>
                    <isActive>false</isActive>
                    <label>8000f0000008cu3AAA</label>
                </value>
                <value>
                    <fullName>8000f0000008exCAAQ</fullName>
                    <isActive>false</isActive>
                    <label>8000f0000008exCAAQ</label>
                </value>
                <value>
                    <fullName>8000f000000WVD3AAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVD3AAO</label>
                </value>
                <value>
                    <fullName>8000f000000WVD7AAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVD7AAO</label>
                </value>
                <value>
                    <fullName>8000f000000WVD9AAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVD9AAO</label>
                </value>
                <value>
                    <fullName>8000f000000WVDCAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDCAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDHAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDHAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDLAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDLAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDMAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDMAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDOAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDOAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDQAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDQAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDSAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDSAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDUAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDUAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDVAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDVAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDYAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDYAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVDcAAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDcAAO</label>
                </value>
                <value>
                    <fullName>8000f000000WVDgAAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDgAAO</label>
                </value>
                <value>
                    <fullName>8000f000000WVDjAAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDjAAO</label>
                </value>
                <value>
                    <fullName>8000f000000WVDpAAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDpAAO</label>
                </value>
                <value>
                    <fullName>8000f000000WVDzAAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVDzAAO</label>
                </value>
                <value>
                    <fullName>8000f000000WVEGAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVEGAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVEMAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVEMAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVEWAA4</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVEWAA4</label>
                </value>
                <value>
                    <fullName>8000f000000WVEeAAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVEeAAO</label>
                </value>
                <value>
                    <fullName>8000f000000WVF6AAO</fullName>
                    <isActive>false</isActive>
                    <label>8000f000000WVF6AAO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Clause_Claims_Data__c</fullName>
        <description>JENGA-1174</description>
        <inlineHelpText>Client will provide medical claims and prescription claims for all Plan Members.</inlineHelpText>
        <label>Lapsed Clause: Claims Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Clause_Compliant__c</fullName>
        <description>JENGA-1174</description>
        <label>Lapsed Clause Compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Clause_Data_Compliant__c</fullName>
        <description>JENGA-1174</description>
        <inlineHelpText>Client will provide medical claims and prescription claims for all Plan Members.</inlineHelpText>
        <label>Lapsed Clause - Data: Compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Clause_Incentives_Compliant__c</fullName>
        <description>JENGA-1174</description>
        <inlineHelpText>Client will allow Livongo to offer financial enrollment incentives to eligible Plan Members.</inlineHelpText>
        <label>Lapsed Clause - Incentives: Compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Clause_MCM_Compliant__c</fullName>
        <description>JENGA-1174</description>
        <inlineHelpText>Client and Livongo will engage in multi-channel marketing distribution, including but not limited to direct print mailers, emails, and HR marketing.</inlineHelpText>
        <label>Lapsed Clause - MCM: Compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Clause_Multi_Channel_Marketing__c</fullName>
        <description>JENGA-1174</description>
        <inlineHelpText>Client and Livongo will engage in multi-channel marketing distribution, including but not limited to direct print mailers, emails, and HR marketing.</inlineHelpText>
        <label>Lapsed Clause: Multi-Channel Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Clause_OEP_Compliant__c</fullName>
        <description>JENGA-1174</description>
        <inlineHelpText>Client follows Livongo’s standard marketing cadence, using Livongo’s optimized assets without customization, and allows A/B marketing material testing to optimize enrollment</inlineHelpText>
        <label>Lapsed Clause - OEP: Compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Clause_Optimized_Enrollment_Plan__c</fullName>
        <description>JENGA-1174</description>
        <inlineHelpText>Client follows Livongo’s standard marketing cadence, using Livongo’s optimized assets without customization, and allows A/B marketing material testing to optimize enrollment</inlineHelpText>
        <label>Lapsed Clause: Optimized Enrollment Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Clause_Use_of_Incentives__c</fullName>
        <description>JENGA-1174</description>
        <inlineHelpText>Client will allow Livongo to offer financial enrollment incentives to eligible Plan Members.</inlineHelpText>
        <label>Lapsed Clause: Use of Incentives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Criteria_Source__c</fullName>
        <label>Lapsed Criteria Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program Agreement</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Note to File</fullName>
                </value>
                <value>
                    <fullName>Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>Client Confirmation Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_User_Detail__c</fullName>
        <label>Lapsed User Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4 months inactivity</fullName>
                </value>
                <value>
                    <fullName>6 months inactivity</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Date_of_Data_Refresh__c</fullName>
        <label>Last Date of Data Refresh</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Launch_Date__c</fullName>
        <description>MAX of Program Overview&apos;s Initial Launch Date</description>
        <inlineHelpText>MAX of Program Overview&apos;s Initial Launch Date</inlineHelpText>
        <label>Latest Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Date_Expected__c</fullName>
        <description>Date when the Reg Page is expected to be launched</description>
        <label>Launch Date (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Date_doesn_t_match_Start_Date__c</fullName>
        <formula>AND(NOT(ISBLANK( Actual_Launch_Date__c )), 
NOT(ISBLANK( Program_Start_Date__c )), 
Actual_Launch_Date__c &lt; TODAY(), 
Actual_Launch_Date__c &lt;&gt; Program_Start_Date__c )</formula>
        <label>Launch Date doesn&apos;t match Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Box_folder_PHI_Release__c</fullName>
        <label>Link to Box folder - PHI Release</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Links_to_Eligibility_Verification_Files__c</fullName>
        <description>Link(s) the Box folder(s) where reverse eligibility files for manual eligibility verification can be found</description>
        <inlineHelpText>Link(s) the Box folder(s) where reverse eligibility files for manual eligibility verification can be found</inlineHelpText>
        <label>Links to Eligibility Verification Folder</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Livongo_DPP_Pricing__c</fullName>
        <label>Livongo DPP Pricing</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Livongo_Incentive_Content_Guide_Date__c</fullName>
        <description>Date when Livongo Incentive: Content Guides was last changed.</description>
        <inlineHelpText>Date when Livongo Incentive: Content Guides was last changed.</inlineHelpText>
        <label>Livongo Incentive Content Guide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Livongo_Incentive_Gift_Cards_Date__c</fullName>
        <description>Date when Livongo Incentive: Gift Card was last changed.</description>
        <inlineHelpText>Date when Livongo Incentive: Gift Card was last changed.</inlineHelpText>
        <label>Livongo Incentive Gift Cards Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Livongo_Incentive_Good_and_Service_Date__c</fullName>
        <description>Date when Livongo Incentive: Goods and Services was last changed.</description>
        <inlineHelpText>Date when Livongo Incentive: Goods and Services was last changed.</inlineHelpText>
        <label>Livongo Incentive Good and Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Livongo_Incentive_for_Automation__c</fullName>
        <label>Livongo Incentive for Automation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMZNGC</fullName>
                </value>
                <value>
                    <fullName>VISAGC</fullName>
                </value>
                <value>
                    <fullName>G&amp;S</fullName>
                </value>
                <value>
                    <fullName>CONTENT</fullName>
                </value>
                <value>
                    <fullName>NOINC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Livongo_Incentives_Content_Guides__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Livongo Incentives: Content Guides</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Livongo_Incentives_Gift_Cards__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Livongo Incentives: Gift Cards</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Livongo_Incentives_Goods_and_Services__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Livongo Incentives: Goods and Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Livongo_Led__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Livongo Led?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Diabetes_Pricing__c</fullName>
        <label>Livongo for Diabetes Pricing</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Livongo_for_Hypertension_Pricing__c</fullName>
        <label>Livongo for Hypertension Pricing</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_of_Partner_Data_Files__c</fullName>
        <label>Location of Partner Data Files</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Logo_File_Name__c</fullName>
        <description>File name for client-approved logo to use for enrollment purposes.</description>
        <inlineHelpText>File name for client-approved logo to use for enrollment purposes.</inlineHelpText>
        <label>Logo File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Name__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Client_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Client Overview</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Comms_Need_Client_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Comms Need Client Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Recruitment_Began__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Initial Member Recruitment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Support_Details__c</fullName>
        <description>Integrated with NetSuite</description>
        <inlineHelpText>Integrated with NetSuite</inlineHelpText>
        <label>Member Support Details</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_Support_URL__c</fullName>
        <label>Member Support URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Member_support_phone__c</fullName>
        <label>Member Support Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Method_of_Delivery__c</fullName>
        <description>How reports will be delivered</description>
        <inlineHelpText>How reports will be delivered</inlineHelpText>
        <label>Method of Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Box-Client Access</fullName>
                </value>
                <value>
                    <fullName>sFTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migrated_myStrength_Contracts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated myStrength Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Billing_Configuration__c</fullName>
        <label>Milestone Billing Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Livongo Standard 2.0</fullName>
                </value>
                <value>
                    <fullName>Cambia MA Legacy</fullName>
                </value>
                <value>
                    <fullName>Cambia ASO Legacy</fullName>
                </value>
                <value>
                    <fullName>Highmark Legacy</fullName>
                </value>
                <value>
                    <fullName>BCBST - Legacy</fullName>
                </value>
                <value>
                    <fullName>BCBST - Legacy,</fullName>
                    <isActive>false</isActive>
                    <label>BCBST - Legacy,</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Number_of_Participants__c</fullName>
        <label>Minimum Number of Participants</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiprogram_Discount__c</fullName>
        <description>This column will be used to reflect the price discount for that program when a member is signed up for multiple programs during that billing cycle.</description>
        <inlineHelpText>This column will be used to reflect the price discount for that program when a member is signed up for multiple programs during that billing cycle.</inlineHelpText>
        <label>Multiprogram Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Device_Type__c</fullName>
        <label>New Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HTAND</fullName>
                </value>
                <value>
                    <fullName>HT900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Member_Shipping_days__c</fullName>
        <description>Indicates the required days in which welcome kits are to be shipped to newly enrolled members</description>
        <inlineHelpText>Indicates the required days in which welcome kits are to be shipped to newly enrolled members</inlineHelpText>
        <label>New Member Shipping (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Email_Addresses_for_Population__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enrollment Marketing - Client Overview</description>
        <label>No Email Addresses for Population</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OE_Month_End__c</fullName>
        <label>OE Month End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OE_Month_Start__c</fullName>
        <label>OE Month Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OE_Period_Length__c</fullName>
        <label>OE Period Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Week</fullName>
                </value>
                <value>
                    <fullName>2 Weeks</fullName>
                </value>
                <value>
                    <fullName>3 Weeks</fullName>
                </value>
                <value>
                    <fullName>4 Weeks</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Platform__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Open Enrollment Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>